@@ -1,7 +1,10 @@
 CHANGELOG of RackSummary
 ========================
-Last update: 2013-02-09
+Last update: 2013-02-10
 
+
+2013-02-10 armin
+* Added public function to handle rack side separation line width
 
 2013-02-09 armin
 * Fixed scaling of unit comment font size
